# bare-ui-kit

./: CMakeLists.txt  README.md  binding.m  index.js  package.json  runtime.js
.github/workflows/: integrate.yml  prebuild.yml  publish.yml  test.yml
lib/: bridging.h  runtime.m  view-controller.h  view-controller.js  view.h  view.js  window.h  window.js
